# ml-internal-library-sample

./: .flake8  .gitignore  CHANGELOG.md  CONTRIBUTING.md  INTEGRATION_GUIDE.md  LICENSE  PROJECT_SUMMARY.md  README.md  main.py  pyproject.toml  quick_start.py  requirements.txt  setup.py
.github/workflows/: ci.yml
data/: .gitkeep
examples/: README.md  __init__.py  advanced_usage.py  basic_usage.py  custom_model.py  production_api.py
notebooks/: demo_usage.ipynb
scripts/: README.md  build.ps1  test.ps1
src/: __init__.py  data_ingestion.py  data_validation.py  model_evaluation.py  model_trainer.py  utils.py
tests/: __init__.py  test_data_ingestion.py  test_data_validation.py  test_model_evaluation.py  test_model_trainer.py
